--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Restaurants#index</h1>
-<p>Find me in app/views/restaurants/index.html.erb</p>
+<h1>My restaurants 🥘</h1>
+<ul>
+  <% @restaurants.each do |rest| %>
+    <li><%= link_to rest.name, restaurant_path(rest), class: "btn btn-primary" %></li>
+  <% end %>
+</ul>
