--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,4 +1,4 @@
 <h2><%= @restaurant.name %></h2>
 <p><%= @restaurant.address %></p>
 <p><%= @restaurant.category %></p>
-  <li><%= link_to 'home', restaurants_path %></li>
+  <li><%= link_to 'home', restaurants_path, class: "btn btn-primary" %></li>
